--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>TITULO DE APP - INDEX</h1>
     <b>Detalle de pagina.</b>
     <b>Alexis. Testing2.</b>
-    <b>Test not-push</b>
+    <b>Test now-push</b>
 </body>
 </html>
